--- a/docs/style.css
+++ b/docs/style.css
@@ -281,6 +281,7 @@ ul.listContent, ul.textContent {
 }
 
 .projList a, h2 { 
+    text-decoration: none;
     background-color: var(--nv-primary);
     border-radius: 10px;
     color: white;
@@ -307,8 +308,67 @@ ul.listContent, ul.textContent {
     max-width: 100%;
     
 }
+/*! CSS for Recent Work Page*/
 
+.recentProjsContent {
+    font-family: var(--main-font);
+    color: var(--text-primary);
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centers .introRecent */
+}
 
+.introRecent {
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+    text-align: center; /* Center text within the heading */
+}
+
+.recentProjsContent h1 {
+    font-size: 3rem;
+    padding: 1rem;
+    margin: 0;
+    border-radius: 20px;
+    background-color: var(--nv-secondary);
+}
+
+.descriptorRecent {
+    align-self: center; /* Aligns descriptor to the right */
+    margin: 0;
+    margin-bottom: 2rem;
+    font-style: italic;
+    padding-right: 1rem; /* Optional: adds some spacing from the right edge */
+}
+
+.recentProjsContent h2 {
+    display: inline-block;
+    padding: 1rem;
+    opacity: 0;
+    transform: translateX(5rem);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+/*Controls the fade in effect modified from ChatGPT*/
+h2.fade-in {
+    opacity: 1;
+    transform: translateX(0);
+}
+.recLinks {
+    text-align: center;
+    list-style-type: none;
+}
+.recLinks a:hover h2 {
+    color: var(--accent-secondary);
+    text-shadow: 1px 1px 5px #000;
+}
+
+.recLinks h2 {
+    margin: 0 auto; /* Centers the h2 heading */
+}
+.recLinks p {
+    text-align: center; /* Ensures the paragraph is centered under the heading */
+    margin-top: 1rem; /* Adds some spacing between the heading and paragraph */
+    line-height: 1.6;
+}
 /*! CSS for footer links */
 .footerLinks {
     background-color: black;
@@ -353,8 +413,24 @@ ul.listContent, ul.textContent {
     color: var(--accent-secondary);
 }
 
+footer {
+    margin-top: auto;
+    padding: 0;
+    background-color: black;
+    color: var(--text-primary);
+    padding: 1rem;
+    text-align: center;
+}
 
-
+.gitCommand {
+    display: inline-block;            /* Ensures it takes up full width */
+    
+    background-color: var(--nv-primary);
+    padding: 1rem;
+    border-radius: 5px;
+    overflow-wrap: break-word; /* Allows text to wrap in mobile view if necessary */
+    margin: 1rem auto;         /* Adds spacing around the element */
+}
 
 /*! Compatibility*/
 /* For desktops */
@@ -373,47 +449,6 @@ ul.listContent, ul.textContent {
         width: 100px; /* Larger size for desktops */
         height: 100px;
     }
-   
-    /*Followed Youtube tutorial to get this cool effect for the resume headings, slightly modified since they are rectangles*/
-    /*https://youtu.be/ezP4kbOvs_E?si=oU2hdXnrwkz9f_mC*/
-    /*
-    @property --angle {
-        syntax: "<angle>";
-        initial-value: 0deg;
-        inherits: false;
-    }
-    .resHeadings::after, .card::before {
-        margin-left: 3px;
-        content: '';
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-image: conic-gradient(from var(--angle), transparent 65%,#228b22);
-        background-size: 100%, 100%;
-        top: 50%;
-        left: 50%;
-        translate: -50% -50%;
-        z-index: -1;
-        padding: 5px;
-        border-radius: 10px;
-        animation: spin 5s ease-in-out infinite;
-    }
-
-    .card::before {
-        filter: blur(1.3rem);
-        opacity: 0.5;
-    }
-    @keyframes spin {
-        from {
-            --angle: 0deg;
-        }
-        to {
-            --angle: 360deg;
-        }
-    }
-    */
-    
-    
 }
 
 /*for smaller screens*/
@@ -494,5 +529,13 @@ ul.listContent, ul.textContent {
         font-size: 1.2rem; /* Slightly larger for better readability */
         line-height: 1.6; /* Increase spacing between lines */
         text-align: center; /* Center the text for mobile screens */
+    }
+    .recentProjsContent h1 {
+        font-size: 2rem;
+       
+    }
+    .gitCommand {
+        font-size: 0.9rem;
+        margin-bottom: 2rem;
     }
 }
